crates/rustereum/tests/ui/param_type.stderr
error: rustereum: unsupported parameter type; only u256, Address, bool in v1
  --> tests/ui/param_type.rs:10:30
   |
10 |     pub fn set(&mut self, x: u128) {
   |                              ^^^^

warning: unused variable: `x`
  --> tests/ui/param_type.rs:10:27
   |
10 |     pub fn set(&mut self, x: u128) {
   |                           ^ help: if this is intentional, prefix it with an underscore: `_x`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
